--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,11 @@ services:
     name: flask-app
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: python app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
-      - key: PORT
-        value: 10000
+      - key: FLASK_APP
+        value: app.py
+      - key: FLASK_ENV
+        value: production
